--- a/minor/ParticleChamber/Trunk/javascript/chamber.html
+++ b/minor/ParticleChamber/Trunk/javascript/chamber.html
@@ -4,9 +4,9 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Particle Chamber Simulation</title>
-	<link rel="stylesheet" href="chamber.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<script type="text/javascript" charset="utf-8" src="prototype.js"></script>
-	<script type="text/javascript" charset="utf-8" src="chamber.js"></script>
+	<link rel="stylesheet" href="stylesheets/chamber.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<script type="text/javascript" charset="utf-8" src="javascripts/prototype.js"></script>
+	<script type="text/javascript" charset="utf-8" src="javascripts/chamber.js"></script>
 </head>
 <body>
 <h1 id="particle_chamber_simulation">Particle Chamber Simulation</h1>
