git-svn-id: file:///Users/will/rendale@105 651630e0-a32e-0410-a001-f4242d931729

--- a/minor/ParticleChamber/Trunk/javascript/chamber.html
+++ b/minor/ParticleChamber/Trunk/javascript/chamber.html
@@ -18,7 +18,7 @@
 			</tr>
 			<tr>
 				<td align="right">Particle Speed:</td>
-				<td><input type="text" name="particle_speed" size="3" value="1" id="particle_speed">&nbsp;&nbsp;Simulation Speed:&nbsp;&nbsp;<input type="text" name="simulation_speed" size="3" value="90" id="simulation_speed"></td>
+				<td><input type="text" name="particle_speed" size="3" value="1" id="particle_speed">&nbsp;&nbsp;Simulation Duration:&nbsp;&nbsp;<input type="text" name="simulation_speed" size="3" value="90" id="simulation_speed"></td>
 			</tr>
 			<tr>
 				<td></td>
