git-svn-id: file:///Users/will/rendale@106 651630e0-a32e-0410-a001-f4242d931729

--- a/minor/ParticleChamber/Trunk/javascript/chamber.html
+++ b/minor/ParticleChamber/Trunk/javascript/chamber.html
@@ -14,7 +14,7 @@
 		<table cellspacing="5" cellpadding="5">
 			<tr>
 				<td align="right">Initial State:</td>
-				<td><input type="text" maxlength="30" size="25" name="initial_string" value="R...L" id="initial_string"></td>
+				<td><input type="text" maxlength="30" size="26" name="initial_string" value="LRRL.LR.LRR.R.LRRL." id="initial_string"></td>
 			</tr>
 			<tr>
 				<td align="right">Particle Speed:</td>
