--- a/minor/ParticleChamber/Trunk/javascript/test_chamber.html
+++ b/minor/ParticleChamber/Trunk/javascript/test_chamber.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title>Test Particle Chamber</title>
-		<script language="JavaScript" src="jsunit/app/jsUnitCore.js"></script>
+		<script language="JavaScript" src="javascripts/jsUnitCore.js"></script>
 		<script type="text/javascript" charset="utf-8" src="javascripts/prototype.js"></script>
 		<script type="text/javascript" charset="utf-8" src="javascripts/chamber.js"></script>		
 		<script type="text/javascript" charset="utf-8" src="javascripts/test_chamber.js"></script>				
