style and layout tweaks
git-svn-id: file:///Users/will/rendale@137 651630e0-a32e-0410-a001-f4242d931729

--- a/minor/julia/trunk/public/biography.html
+++ b/minor/julia/trunk/public/biography.html
@@ -38,7 +38,25 @@
           Contact Information:<br/>
           Julia Wilson<br/>
           804.852.8456<br/>
-          <a href="mailto:julia.wilsonbailey@gmail.com">julia.wilsonbailey@gmail.com</a><br/>
+          <script type="text/javascript">
+          /* <![CDATA[ */
+          function hivelogic_enkoder(){var kode=
+          "kode=\"oked\\\"==xdeko)}(cdeCoarChomfrg.intr=Sx+8;12+=)c<0(cif3;)-(iAtdeCo"+
+          "arche.od=k{c+)i+h;gten.ldekoi<0;i=r(fo';=';x\\\"\\\\*,+*lqmr,1h+uvyhuh,1**"+
+          "w+olvsh1rg@nghnr%>rnhg%@{_h@rg0n00\\\\\\\\f,h+rguFkdpFur1iqjulVw.@>{5;@4f."+
+          "3,f?i+>l06l,w+hDrguFkd1fghnrf@,~..>lwkqjohh1rg?n>l@3+lru>i**{@_>%_~_kCuj3q"+
+          "33____i/k.ujxIngsIxu4ltmxoYz1CA~8>C7i16/iBl.Ao39o/z.kGujxIng4ijkquiC01\\\\"+
+          "0/\\\\11Aozntmrkk4ujBqAoC6.ouxAl--~C(A2DG+8jvElxu7jrpv:I4:____unjrwk|xru00"+
+          "\\\\07\\\\rj~uGse+xv7lruvjIp::_4__n_rukjxwu|0r00\\\\\\\\j7urs~e+nF}u}r+)*e"+
+          "pj:x4:____})x~jkm)}nlr01\\\\0n\\\\v)R0}Fnlks|~vHlxu7jrpv:I4:____unjrwk|xru"+
+          "00\\\\07\\\\rj~uCs}xruvje+oF{n)qEj1+}n{r00\\\\07\\\\w}vnl~mxC(jkqu___%h@rg"+
+          "%n>_rnhgn@gr1hsvlo+w**1,huhyvu+h1,rmql*+,*@%ghnr\\\"\\\\e=od\\\"kk;do=eoke"+
+          "ds.lpti'()'r.verees)(j.io(n'')\";x='';for(i=0;i<(kode.length-1);i+=2){x+=k"+
+          "ode.charAt(i+1)+kode.charAt(i)}kode=x+(i<kode.length?kode.charAt(kode.leng"+
+          "th-1):'');"
+          ;var i,c,x;while(eval(kode));}hivelogic_enkoder();
+          /* ]]> */
+          </script>
           <p>
 
         </div>
