--- a/minor/julia/trunk/public/schedule.html
+++ b/minor/julia/trunk/public/schedule.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="stylesheets/common.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="stylesheets/splash.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
-<body>
+<body class="schedule">
   <div class="page">
     <div class="content_window">
       <div class="content">
@@ -27,38 +27,35 @@
           </p>
           <h2>weekly classes</h2>
           <p>
-          Big Apple Yoga<br />
+          <h3>Big Apple Yoga</h3>
           <a href="http://www.bigapplepoweryoga.com">www.bigapplepoweryoga.com</a>
-          </p>
           <table border="0" cellspacing="5" cellpadding="5">
-            <tr><td>Saturday</td><td>9:15 -10:45a</td><td>All Levels</td></tr>
-            <tr><td></td><td>11:00 -12:30p</td><td>Basics</td></tr>
-            <tr><td>Sunday</td><td>5:00p - 6:30p</td><td>All Levels</td></tr>
-            <tr><td></td><td>6:45p - 8:00p</td><td>Relax & Renew</td></tr>
+            <tr><td class="day">Saturday</td><td class="time">9:15 -10:45a</td><td class="type">All Levels</td></tr>
+            <tr><td class="day"></td><td class="time">11:00 -12:30p</td><td class="type">Basics</td></tr>
+            <tr><td class="day">Sunday</td><td class="time">5:00p - 6:30p</td><td class="type">All Levels</td></tr>
+            <tr><td class="day"></td><td class="time">6:45p - 8:00p</td><td class="type">Relax & Renew</td></tr>
           </table>
+          </p>
           <p>
-          New York Yoga<br />
+          <h3>New York Yoga</h3>
           <a href="http://newyorkyoga.com">newyorkyoga.com</a>
-          </p>
           <table border="0" cellspacing="5" cellpadding="5">
-            <tr><td>Monday</td><td>1:30p - 3:00p</td><td>Hot Vinyasa</td></tr>
-            <tr><td>Wednesday</td><td>1:30p - 3:00p</td><td>Hot Vinyasa</td></tr>
-            <tr><td>Thursday</td><td>12:20p - 1:20p</td><td>Lunch Crunch</td></tr>
+            <tr><td class="day">Monday</td><td class="time">1:30p - 3:00p</td><td class="type">Hot Vinyasa</td></tr>
+            <tr><td class="day">Wednesday</td><td class="time">1:30p - 3:00p</td><td class="type">Hot Vinyasa</td></tr>
+            <tr><td class="day">Thursday</td><td class="time">12:20p - 1:20p</td><td class="type">Lunch Crunch</td></tr>
           </table>
+          </p>
           <p>
-          Empire Fitness<br />
+          <h3>Empire Fitness</h3>
           <a href="http://www.empirefitnessclubs.com">www.empirefitnessclubs.com</a>
-          </p>
           <table border="0" cellspacing="5" cellpadding="5">
-            <tr><td>Thursday</td><td>6:00p - 7:00p</td><td>Power Yoga</td></tr>
+            <tr><td class="day">Thursday</td><td class="time">6:00p - 7:00p</td><td class="type">Power Yoga</td></tr>
           </table>
-          
+          </p>
           <h2>workshops</h2>
           <p>
-          September 8 and 9, 2007
-          </p>
-          <p>
-          Spirit of the New Workplace by Joe Harder
+          September 8 and 9, 2007<br/>
+          Spirit of the New Workplace by Joe Harder<br />
           Santa Clara University        
           </p>
           </div>
