--- a/minor/julia/trunk/public/private_instruction.html
+++ b/minor/julia/trunk/public/private_instruction.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="page">
-    <div class="content_window">
+    <div class="content_window_pages">
       <div class="content">
         <ul class="top_navigation">
           <li><a href="index.html" class="nav">home</a> | </li>
